# HabitsCourseWork7

./: .env.sample  .gitignore  README.md  docker-compose.yaml  habitdata.json  pyproject.toml  requirements.txt
config/: celery.py  settings.py  urls.py
habits/: admin.py  models.py  paginators.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_alter_habit_duration.py  0003_habit_date.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
